--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,4 @@ flate2 = "1.0"                                                     # gzip compre
 sha1 = "0.10.1"                                                    # hashing
 hex = "0.4.3"                                                      # working with hash output
 anyhow = "1.0.59"                                                  # error handling
+tempfile = "3.2.0"                                                 # creating temporary files
